https://bugs.webkit.org/show_bug.cgi?id=76995. WebKit fails IETC :indeterminate and input type=radio test.

As per the HTML spec http://www.whatwg.org/specs/web-apps/current-work/multipage/the-input-element.html#dom-input-indeterminate,
only checkbox input type should respect the indeterminate state.
Removed the support for indeterminate state for radio input types.

Source/WebCore:

Patch by Joe Thomas <joethomas@motorola.com> on 2012-01-26
Reviewed by Eric Seidel.

Modified the existing test cases.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setIndeterminate): Indeterminate state is supported only for checkbox input type.

LayoutTests:

Modified the existing test cases.

Patch by Joe Thomas <joethomas@motorola.com> on 2012-01-26
Reviewed by Eric Seidel.

* fast/forms/indeterminate-radio.html:
* fast/forms/radio-checkbox-restore-indeterminate.html:

Canonical link: https://commits.webkit.org/93959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105968 268f45cc-cd09-0410-ab3c-d52691b4dbfc