Source/WebCore/html/InputType.h
@@ -263,6 +263,8 @@ public:
     // string. This should not be called for types without valueAsNumber.
     virtual String serialize(double) const;
 
+    virtual bool supportsIndeterminateAppearance() const;
+
 protected:
     InputType(HTMLInputElement* element) : m_element(element) { }
     HTMLInputElement* element() const { return m_element; }
